# mormo

./: .code2pdf  .deepsource.toml  .env  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  Dockerfile  LICENSE  Makefile  README.md  cli.py  docker-compose.yml  goss.yaml  goss_wait.yaml  mormo.tf  mormo.yaml  pyproject.toml  requirements.txt  tox.ini
.circleci/: config.yml
docs/: requirements.txt  test_data_file.md
docs/src/: conf.py  index.rst  postman_collection.rst  swagger_ui.html
mormo/: __init__.py  api.py  cli.py  convert.py  model.py  postman_test.py  util.py
mormo/schema/: __init__.py  api.py  openapi_v3.py  postman_collection_v2.py
scripts/: api_client.py  json_to_yaml.py  load_api_guru.py  prune_tests.sh  test_api.sh
scripts/git/: post-merge
tests/: conftest.py  test_convert.py  test_model.py  test_postman_test.py  test_test_runner.py  test_util.py
tests/data/openapi/json/: adyen.com:AccountService.json  adyen.com:CheckoutService.json  adyen.com:CheckoutUtilityService.json  adyen.com:FundService.json  adyen.com:NotificationConfigurationService.json  adyen.com:PaymentService.json  adyen.com:PayoutService.json  adyen.com:RecurringService.json  api2pdf.com.json  bclaws.ca:bclaws.json  bikewise.org.json  brex.io.json  departureboard.io.json  exchangerate-api.com.json  extpose.com.json  fraudlabspro.com:fraud-detection.json  fraudlabspro.com:sms-verification.json  fulfillment.com.json  geodatasource.com.json  getthedata.com:bng2latlong.json  (+154 more)
tests/data/swagger/: someapi.yaml
tests/schema/: test_openapi.py  test_postman_collection.py
(+63 files in other folders)
